language-aggregator-api/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: language-aggregator-api
  labels:
    run: language-aggregator-api
    hystrix.cluster: 'language-aggregator-api'
    hystrix.enabled: 'true'
spec:
  ports:
  - port: 80
    targetPort: 5050
  selector:
    run: language-aggregator-api
